2010-02-16  Sanel <karijes@users.sourceforge.net>

	* m4/compiler-name.m4: s/ac_compiler_name/ac_compiler_vendor and
	s/EDELIB_COMPILER_NAME/EDELIB_COMPILER_VENDOR
	* configure.in:
	* Jamconfig.in: there is no need to set SUN_COMPILER variable when
	SunStudio is used, now configure script will figure it out

2010-02-15  Sanel <karijes@users.sourceforge.net>

	* m4/fltk.m4: check if FLTK was compiled with XFT support

2010-02-11  Sanel <karijes@users.sourceforge.net>

	* src/Theme.cpp: some cleanup

2010-02-04  Sanel <karijes@users.sourceforge.net>

	* configure.in:
	* Jamrules:
	* po/update-message.sh.in: update-messages.sh will be filled with xgettext
	path if available

2010-02-03  Sanel <karijes@users.sourceforge.net>

	* po/update-messages.sh:
	* po/edelib.pot: default template file should be named edelib.pot
	* Jamrules:
	* Jamfile:
	* po/Jamfile: modified MakeInstallPrivate so it can accept target
	filename; added ability to install translated files in locale directory

2010-02-02  Sanel <karijes@users.sourceforge.net>

	* po/update-messages.sh:
	* po/messages.pot: created directory for translations with accompanying files

2010-01-19  Sanel <karijes@users.sourceforge.net>

	* new entry in new year!!!
	* src/DesktopFile.cpp: if localized keys are not found, fallback to
	generic ones

2009-12-18  Sanel <karijes@users.sourceforge.net>

	* edelib/Config.h:
	* src/Config.cpp: small refactoring

2009-12-16  Sanel <karijes@users.sourceforge.net>

	* edelib/Netwm.h: little change for netwm_window_is_manageable() doc

2009-12-10  Sanel <karijes@users.sourceforge.net>

	* edelib/Netwm.h:
	* src/Netwm.cpp: some API refactoring, added netwm_window_get_type()

2009-12-09  Sanel <karijes@users.sourceforge.net>

	* edelib/Netwm.h:
	* src/Netwm.cpp: attempt to put common wm code in one place

2009-12-03  Sanel <karijes@users.sourceforge.net>

	* src/tinyscheme/scheme.c: dump {} tokens; fixed so [] tokens can be
	aliased with ()
