@@ -1,3 +1,9 @@
+2010-02-18  Sanel <karijes@users.sourceforge.net>
+
+	* src/Netwm.cpp: use correct state for setting maximized state; by default
+	is toggled state for cases when maximization is issued on already
+	maximized window
+
 2010-02-16  Sanel <karijes@users.sourceforge.net>
 
 	* m4/compiler-name.m4: s/ac_compiler_name/ac_compiler_vendor and
